--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <h2 id="sec1">まえがき</h2>
             <p>こんにちは、ポケモンプレイヤーのGorochuです。</p>
             <p>本サイトでは、s38で使用した白バド"受け＆トリル"構築について紹介します。</p>
+            <p>最終レートは1830、順位は500位でした。</p>
             <p>本構築のコンセプトは、<span style="font-weight: bold;">「受け構築とトリル構築を組み合わせる」</span>です。</p>
             <p>それでは、これから構築経緯,使用ポケモン,立ち回りについて紹介します。</p>
 
@@ -124,4 +125,5 @@
     </header>
 
 </body>
+
 </html>
