--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             
             <p><span style="font-weight: bold;">ミライドン＠とつげきチョッキ</span></p>
             <p><span style="font-weight: bold;">テラス：電気/性格：控え目</span></p>
-            <p><span style="font-weight: bold;">207(252)-94-121(4)-189(132)-150-156(4)</span></p>
+            <p><span style="font-weight: bold;">207(252)-94-121(4)-189(132)-150(116)-156(4)</span></p>
             <p><span style="font-weight: bold;">イナズマドライブ/パラボラチャージ/流星群/とんぼ返り</span></p>
             <p>黒バドや水ラオス,ラッシャなどに対して白バドから後出しします。</p>
             <p>ミライの他にラッシャもいるため、水ラオスがインファイトを打ってくる場合があるのですが、その場合はブリムに交代してトリル癒しの起点にします。</p>
@@ -127,3 +127,4 @@
 </body>
 
 </html>
+
